--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,10 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "semi": [2, "always"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
