--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@3
-
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
       - name: Install dependencies
         uses: npm ci
